# python_advanced

./: .gitignore  lcov.info  pyproject.toml
silc_toolkit/: __init__.py  database.py  functional.py  indicators.py  loaders.py  mcp_server.py  models.py
src/: country_report.qmd
src/notebooks/: 01_OOP_and_Functional.ipynb  02_Packaging_and_Testing.ipynb  03_Advanced_Pandas_Polars.ipynb  04_WebScraping_SQLAlchemy.ipynb  05_NumPy_ML_Pipelines.ipynb  06_AI_MCP_Visualization.ipynb  07_Reproducible_Research.ipynb  08_Hackathon.ipynb  country_report_template.ipynb
src/scripts/: debug_demo.py
tests/: conftest.py  test_indicators.py  test_loaders.py
