# Day 7: adds papermill, nbformat for reproducible research + OpenAI for AI reports
# New in notebook 07:
#   + papermill>=2.5      (parametrised notebook execution)
#   + nbformat>=5.9       (read/write notebook JSON)
#   + nbconvert>=7.0      (notebook -> HTML/PDF rendering)
#   + ipykernel>=6.0      (kernel for papermill)
#   + ipywidgets>=8.0     (progress bars / widgets)
#   + openai>=1.0         (GPT-5.5 narrative generation)
#   + python-dotenv>=1.0  (load OPENAI_API_KEY from .env)
#   + tabulate>=0.9       (DataFrame.to_markdown for prompts)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silc-toolkit"
version = "0.1.0"
description = "Advanced Python for Official Statistics -- EU-SILC Analysis Toolkit"
requires-python = ">=3.11"
authors = [{ name = "Christian Kauth", email = "christian.kauth@unifr.ch" }]
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.5",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "polars>=0.20",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "sqlalchemy>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "shap<0.52",
    "matplotlib>=3.8",
    "numba>=0.60",
    "seaborn>=0.13",
    "plotly>=5.18",
    "geopandas>=0.14",
    "mcp>=1.3",
    "httpx>=0.26",
    "papermill>=2.5",
    "nbconvert>=7.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.3",
]

[project.urls]
Repository = "https://github.com/icon-institute/silc-toolkit"

[tool.hatch.build.targets.wheel]
packages = ["silc_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["silc_toolkit"]

